Changes to index.html and profile pic upload

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <a class="nav-link active" aria-current="page" href="#">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Development</a>
+                    <a class="nav-link" href="#">Software</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Music</a>
@@ -34,7 +34,14 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">CV</a>
-                </li>                                     <li class="nav-item">
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Photography</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Property</a>
+                </li>                                     
+                <li class="nav-item">
                     <a class="nav-link">Contact</a>
                 </li>
             </ul>
@@ -49,9 +56,9 @@
     <div class="b-example-divider"></div>
 <!-- Centered hero -->
 <div class="px-4 py-5 my-5 text-center">
-    <img class="d-block mx-auto mb-4" src="https://avatars.githubusercontent.com/u/105940138?s=400&u=1a13795238ad0b9c67d7bb073ddcbe6795242a56&v=4" alt="" width="399" >
+    <img class="d-block mx-auto mb-4" src="assets/images/profile.jpg" alt="" width="399" >
     <h1 class="display-5 fw-bold">Welcome</h1> <div class="col-lg-6 mx-auto">
-        <p class="lead mb-4"> I'm Andy - a Computer Science graduate and Java SDET with an interest in collaborative software development, audio engineering and music technology. I am skilled in Agile methodologies, SQL, Linux, Git and more. I'm also a guitar technician and music producer with knowledge of digital audio recording.</p>
+        <p class="lead mb-4"> I'm Andy - a software automation tester, audio engineer and music technology enthusiast. I am experienced in Python, Java, C++. I'm also a guitar technician and music producer with knowledge of digital audio recording.</p>
 
     </div>
 </div>
@@ -59,9 +66,9 @@
 <!-- Projects -->
     <div class="b-example-divider"></div>
     <div class="px-4 pt-5 my-5 text-center border-bottom">
-        <h1 class="display-4 fw-bold">Software Development</h1>
+        <h1 class="display-4 fw-bold">Software</h1>
         <div class="col-lg-6 mx-auto">
-            <p class="lead mb-4">For my Computer  </p>
+            <p class="lead mb-4">Computer Science graduate </p>
             <div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-5">
                 <a href="https://github.com/GitMe23"><button type="button" class="btn btn-primary btn-lg px-4 me-sm-3">GitHub</button></a>
                 <a href="https://www.linkedin.com/in/andy-hopwood-a4abaa239/"><button type="button" class="btn btn-primary btn-lg px-4 me-sm-3">LinkedIn</button></a>
@@ -71,6 +78,12 @@
             <div class="container px-5">
                 <img src="assets/images/website-screenshot.png" class="img-fluid border rounded-3 shadow-lg mb-4" alt="Example image" width="700" height="500" loading="lazy">
             </div>
+        </div>
+        <div>
+            <div class="container px-5">
+                <img src="assets/images/receiving_degree.jpg" class="img-fluid border rounded-3 shadow-lg mb-4" alt="Receiving undergraduate degree from The Open University" width="700" height="500" loading="lazy">
+                <figcaption>Receiving an undergraduate degree in Software Engineering from The Open University</figcaption>
+            </div>   
         </div>
     </div>
 
@@ -114,6 +127,40 @@
                 <h1 class="display-5 fw-bold lh-1 mb-3">Responsive left-aligned hero with image</h1>
                 <p class="lead">Quickly design and customize responsive mobile-first sites with Bootstrap, the world’s most popular front-end open source toolkit, featuring Sass variables and mixins, responsive grid system, extensive prebuilt components, and powerful JavaScript plugins.</p>
 
+            </div>
+        </div>
+    </div>
+
+    <!-- Photography -->
+
+    <div class="px-4 pt-5 my-5 text-center border-bottom">
+        <h1 class="display-4 fw-bold">Photography</h1>
+        <div class="col-lg-6 mx-auto">
+            <p class="lead mb-4">Intro to film dev</p>
+            <div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-5">
+                <a href="https://www.flickr.com/photos/114870549@N03/"><button type="button" class="btn btn-primary btn-lg px-4 me-sm-3">Flickr</button></a>
+            </div>
+        </div>
+        <div class="overflow-hidden" style="max-height: 30vh;">
+            <div class="container px-5">
+                <img src="assets/images/website-screenshot.png" class="img-fluid border rounded-3 shadow-lg mb-4" alt="Example image" width="700" height="500" loading="lazy">
+            </div>
+        </div>
+    </div>
+
+    <!-- Property -->
+
+    <div class="px-4 pt-5 my-5 text-center border-bottom">
+        <h1 class="display-4 fw-bold">Photography</h1>
+        <div class="col-lg-6 mx-auto">
+            <p class="lead mb-4">Intro to film dev</p>
+            <div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-5">
+                <a href="https://www.flickr.com/photos/114870549@N03/"><button type="button" class="btn btn-primary btn-lg px-4 me-sm-3">Flickr</button></a>
+            </div>
+        </div>
+        <div class="overflow-hidden" style="max-height: 30vh;">
+            <div class="container px-5">
+                <img src="assets/images/website-screenshot.png" class="img-fluid border rounded-3 shadow-lg mb-4" alt="Example image" width="700" height="500" loading="lazy">
             </div>
         </div>
     </div>
