Added Flickr embedded photos

--- a/index.html
+++ b/index.html
@@ -24,26 +24,20 @@
                     <a class="nav-link active" aria-current="page" href="#">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Software</a>
+                    <a class="nav-link" href="#software">Software</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Music</a>
+                    <a class="nav-link" href="#music">Music</a>
                 </li>
+                <!-- <li class="nav-item"> -->
+                    <!-- <a class="nav-link" href="#">CV</a> -->
+                <!-- </li> -->
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Guitar </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">CV</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Photography</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Property</a>
-                </li>                                     
-                <li class="nav-item">
-                    <a class="nav-link">Contact</a>
-                </li>
+                    <a class="nav-link" href="#photography">Photography</a>
+                </li>                                   
+                <!-- <li class="nav-item"> -->
+                    <!-- <a class="nav-link">Contact</a> -->
+                <!-- </li> -->
             </ul>
             <form class="d-flex" role="search">
                 <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
@@ -66,8 +60,9 @@
 </div>
 
 <!-- Projects -->
-    <div class="b-example-divider"></div>
+	<div class="b-example-divider"></div>
     <div class="px-4 pt-5 my-5 text-center border-bottom">
+	<div id="software">
         <h1 class="display-4 fw-bold">Software</h1>
         <div class="col-lg-6 mx-auto">
             <p class="lead mb-4">Computer Science graduate </p>
@@ -88,17 +83,19 @@
             </div>   
         </div>
     </div>
-
+	</div>
 
     <div class="b-example-divider"></div>
     <!-- Music -->
+	<div id="music">
     <div class="px-4 py-5 my-5 text-center">
         <h1 class="display-5 fw-bold">Music</h1> <div class="col-lg-6 mx-auto">
         <p class="lead mb-4">A few recent tracks uploaded to Soundcloud...</p>
         <iframe width="100%" height="100" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1277366260&color=%230066cc&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/andyhop" title="Art Makey" target="_blank" style="color: #cccccc; text-decoration: none;">Art Makey</a> · <a href="https://soundcloud.com/andyhop/doesnt-meta" title="Doesn&#x27;t Meta" target="_blank" style="color: #cccccc; text-decoration: none;">Doesn&#x27;t Meta</a></div>
         <iframe width="100%" height="100" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1277367358&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/andyhop" title="Art Makey" target="_blank" style="color: #cccccc; text-decoration: none;">Art Makey</a> · <a href="https://soundcloud.com/andyhop/909-bang-sesh" title="909 Bang Sesh" target="_blank" style="color: #cccccc; text-decoration: none;">909 Bang Sesh</a></div>
         <iframe width="100%" height="100" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1277365831&color=%2300aabb&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/andyhop" title="Art Makey" target="_blank" style="color: #cccccc; text-decoration: none;">Art Makey</a> · <a href="https://soundcloud.com/andyhop/heron" title="Heron" target="_blank" style="color: #cccccc; text-decoration: none;">Heron</a></div>
-    </div>
+		</div>
+	</div>
     </div>
 
 
@@ -147,7 +144,7 @@
     </div>
 
     <!-- Photography -->
-
+	<div id="photography">
     <div class="px-4 pt-5 my-5 text-center border-bottom">
         <h1 class="display-4 fw-bold">Photography</h1>
         <div class="col-lg-6 mx-auto">
@@ -158,8 +155,10 @@
         </div>
         <div class="overflow-hidden" style="max-height: 30vh;">
             <div class="container px-5">
-                <img src="assets/images/website-screenshot.png" class="img-fluid border rounded-3 shadow-lg mb-4" alt="Example image" width="700" height="500" loading="lazy">
+				<a data-flickr-embed="true" href="https://www.flickr.com/photos/114870549@N03/14193080354/" title="Kodak Ektacolor Pro Gold 160 (expired)"><img src="https://live.staticflickr.com/7326/14193080354_f8e649d8f2_k.jpg" width="358" alt="Kodak Ektacolor Pro Gold 160 (expired)"/></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>
+                <a data-flickr-embed="true" href="https://www.flickr.com/photos/114870549@N03/12599693823/" title="Ilford Delta 100 &amp; DD-X"><img src="https://live.staticflickr.com/7318/12599693823_0768e3d125_k.jpg" width="558" alt="Ilford Delta 100 &amp; DD-X"/></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>
             </div>
+			</div>
         </div>
     </div>
 
