Replaced profile pic with gif

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <div class="b-example-divider"></div>
 <!-- Centered hero -->
 <div class="px-4 py-5 my-5 text-center">
-    <img class="d-block mx-auto mb-4" src="assets/images/profile.jpg" alt="" width="399" >
+    <img class="d-block mx-auto mb-4" src="https://media.giphy.com/media/dWesBcTLavkZuG35MI/giphy.gif" alt="" width="400" >
     <h1 class="display-5 fw-bold">Welcome</h1> <div class="col-lg-6 mx-auto">
 	<h5>* Website currently under construction *</h5> 
 	<div class="col-lg-6 mx-auto">
